@@ -8,16 +8,17 @@ import com.a407.back.domain.Room.Process;
 import com.a407.back.domain.SubCategory;
 import com.a407.back.domain.User;
 import com.a407.back.domain.Zipsa;
-import com.a407.back.dto.Match.MatchSearchRequest;
-import com.a407.back.dto.Match.MatchSearchResponse;
-import com.a407.back.dto.Match.RoomCreateRequest;
+import com.a407.back.dto.match.MatchSearchRequest;
+import com.a407.back.dto.match.MatchSearchResponse;
+import com.a407.back.dto.match.RoomCreateRequest;
 import com.a407.back.model.repo.CategoryRepository;
 import com.a407.back.model.repo.MatchRepository;
 import com.a407.back.model.repo.NotificationRepository;
+import com.a407.back.model.repo.RoomRepository;
 import com.a407.back.model.repo.UserRepository;
+import com.a407.back.model.repo.ZipsaRepository;
 import jakarta.transaction.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -33,26 +34,29 @@ public class MatchServiceImpl implements MatchService {
 
     private final NotificationRepository notificationRepository;
 
+    private final RoomRepository roomRepository;
+
+    private final ZipsaRepository zipsaRepository;
     @Override
     @Transactional
-    public List<MatchSearchResponse> getMatchSearchResponses(MatchSearchRequest request) {
-        List<Zipsa> zipsas = matchRepository.findByConditions(request);
-
-        return zipsas.stream().map(zipsa -> {
+    public List<MatchSearchResponse> getFilteredZipsaList(MatchSearchRequest matchSearchRequest) {
+        List<Zipsa> zipsaList = matchRepository.findByConditions(matchSearchRequest);
+        return zipsaList.stream().map(zipsa -> {
             List<String> categories = getCategoryNamesForZipsa(zipsa);
             String gradeName = zipsa.getGradeId().getName();
             int gradeSalary = zipsa.getGradeId().getSalary();
-
+            double scoreAverage = (zipsa.getKindnessAverage() + zipsa.getRewindAverage() + zipsa.getSkillAverage()) / 3.0;
             return new MatchSearchResponse(
                 zipsa.getZipsaId().getName(),
                 zipsa.getZipsaId().getProfileImage(),
                 gradeName,
                 gradeSalary,
                 zipsa.getServiceCount(),
-                String.valueOf(request.getMajorCategory()),
+                String.valueOf(matchSearchRequest.getMajorCategoryId()),
+                scoreAverage,
                 categories
             );
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @Override
@@ -63,7 +67,7 @@ public class MatchServiceImpl implements MatchService {
     // 필터링 기반 방 만들기
     @Override
     @Transactional
-    public Long makeRoom(RoomCreateRequest roomCreateRequest) {
+    public Long makeFilterRoom(RoomCreateRequest roomCreateRequest) {
         // User 가져오기
         User user = userRepository.findByUserId(roomCreateRequest.getUserId());
         // SubCategory 가져오기
@@ -72,23 +76,51 @@ public class MatchServiceImpl implements MatchService {
         // 알림 개수만큼 방 만들기
         int notificationCount = roomCreateRequest.getHelperList().size();
         Room room = Room.builder().userId(user).subCategoryId(subCategory)
+            .title(roomCreateRequest.getTitle())
             .content(roomCreateRequest.getContent())
+            .place(roomCreateRequest.getPlace())
             .estimateDuration(roomCreateRequest.getEstimateDuration())
             .roomCreatedAt(roomCreateRequest.getRoomCreatedAt())
             .expectationStartedAt(roomCreateRequest.getExpectationStartedAt())
             .expectationEndedAt(roomCreateRequest.getExpectationEndedAt())
             .expectationPay(roomCreateRequest.getExpectationPay())
-            .notificationCount(notificationCount).status(Process.CREATE).build();
-        Room newRoom = matchRepository.makeRoom(room);
-        Long newRoomId = newRoom.getRoomId();
+            .notificationCount(notificationCount).status(Process.CREATE).isComplained(false)
+            .isPublic(false).isReviewed(false).isReported(false).build();
+        Long newRoomId = roomRepository.makeRoom(room);
+        Room newRoom = roomRepository.findByRoomId(newRoomId);
         // 방 아이디 가지고 알림 보내기
         for (Long id : roomCreateRequest.getHelperList()) {
             Notification notification = Notification.builder().roomId(newRoom)
                 .sendId(roomCreateRequest.getUserId()).receiveId(id).type(
-                    Type.USER).status(Status.STANDBY).build();
+                    Type.USER).status(Status.STANDBY).isRead(false).build();
             notificationRepository.makeNotification(notification);
         }
 
         return newRoomId;
+    }
+
+    @Override
+    @Transactional
+    public Long changeMatchStartedAt(Long roomId) {
+        matchRepository.changeMatchStartedAt(roomId);
+        changeMatchStatus(roomId, "ONGOING");
+        return roomId;
+    }
+
+    @Override
+    @Transactional
+    public Long changeMatchEndedAt(Long roomId) {
+        matchRepository.changeMatchEndedAt(roomId);
+        changeMatchStatus(roomId, "END");
+        // 집사의 serviceCount + 1
+        Room room = roomRepository.findByRoomId(roomId);
+        Zipsa zipsa = zipsaRepository.findByZipsaId(room.getZipsaId().getZipsaId().getUserId());
+        zipsaRepository.changeServiceCountIncrease(zipsa);
+        return roomId;
+    }
+
+    @Override
+    public void changeMatchStatus(Long roomId, String status) {
+        matchRepository.changeMatchStatus(roomId, status);
     }
 }
